--- a/hospital-management-backend/package.json
+++ b/hospital-management-backend/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "build":"npm i"
+    "build":"npm install"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
